Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_separator: "-"
 name: EJ-Cafe
 description: Judy和Evan的咖啡屋。
 minimal_mistakes_skin: dark
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
